force-app/main/default/objects/ProcessSwitches__c/ProcessSwitches__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Custom Fields represent toggles for triggers/flows/pbs. For Apex triggers, add a custom field with the exact name of the trigger handler.</description>
    <label>Process Switches</label>
</CustomObject>