force-app/main/default/objects/ProcessSwitches__c/fields/AccessRequestHandler__c.field-meta.xml
<CustomField>
    <fullName>AccessRequestHandler__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Access Request Handler</label>
    <type>Checkbox</type>
</CustomField>