force-app/main/default/objects/ProcessSwitches__c/fields/AccountContactRelationHandler__c.field-meta.xml
<CustomField>
    <fullName>AccountContactRelationHandler__c</fullName>
    <defaultValue>true</defaultValue>
    <label>AccountContactRelationHandler</label>
    <type>Checkbox</type>
</CustomField>