force-app/main/default/objects/ProcessSwitches__c/fields/AccountHandler__c.field-meta.xml
<CustomField>
    <fullName>AccountHandler__c</fullName>
    <defaultValue>false</defaultValue>
    <label>AccountHandler</label>
    <type>Checkbox</type>
</CustomField>