force-app/main/default/objects/ProcessSwitches__c/fields/ActionPlanItemHandler__c.field-meta.xml
<CustomField>
    <fullName>ActionPlanItemHandler__c</fullName>
    <defaultValue>true</defaultValue>
    <description>ActionPlanItemHandler apex class</description>
    <inlineHelpText>ActionPlanItemHandler apex class</inlineHelpText>
    <label>ActionPlanItemHandler</label>
    <type>Checkbox</type>
</CustomField>