force-app/main/default/objects/ProcessSwitches__c/fields/ActionPlanTemplateItemHandler__c.field-meta.xml
<CustomField>
    <fullName>ActionPlanTemplateItemHandler__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Action Plan Template Item Handler</label>
    <type>Checkbox</type>
</CustomField>