force-app/main/default/objects/ProcessSwitches__c/fields/CasePartyHandler__c.field-meta.xml
<CustomField>
    <fullName>CasePartyHandler__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Case Party Handler</label>
    <type>Checkbox</type>
</CustomField>