force-app/main/default/objects/ProcessSwitches__c/fields/CaseTeamAssignmentHandler__c.field-meta.xml
<CustomField>
    <fullName>CaseTeamAssignmentHandler__c</fullName>
    <defaultValue>true</defaultValue>
    <description>CaseTeamAssignmentHandler apex class</description>
    <inlineHelpText>CaseTeamAssignmentHandler apex class</inlineHelpText>
    <label>CaseTeamAssignmentHandler</label>
    <type>Checkbox</type>
</CustomField>