force-app/main/default/objects/ProcessSwitches__c/fields/ChargentOrderHandler__c.field-meta.xml
<CustomField>
    <fullName>ChargentOrderHandler__c</fullName>
    <defaultValue>true</defaultValue>
    <label>ChargentOrder Handler</label>
    <type>Checkbox</type>
</CustomField>