force-app/main/default/objects/ProcessSwitches__c/fields/ChargentOrdersEmailNotificationHandler__c.field-meta.xml
<CustomField>
    <fullName>ChargentOrdersEmailNotificationHandler__c</fullName>
    <defaultValue>true</defaultValue>
    <label>ChargentOrders EmailNotification Handler</label>
    <type>Checkbox</type>
</CustomField>