force-app/main/default/objects/ProcessSwitches__c/fields/CollectionAllocationHandler__c.field-meta.xml
<CustomField>
    <fullName>CollectionAllocationHandler__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Collection Allocation Handler</label>
    <type>Checkbox</type>
</CustomField>