force-app/main/default/objects/ProcessSwitches__c/fields/ContactHandler__c.field-meta.xml
<CustomField>
    <fullName>ContactHandler__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Contact Handler</label>
    <type>Checkbox</type>
</CustomField>