force-app/main/default/objects/ProcessSwitches__c/fields/ContentDocumentHandler__c.field-meta.xml
<CustomField>
    <fullName>ContentDocumentHandler__c</fullName>
    <defaultValue>true</defaultValue>
    <description>ContentDocumentHandler apex class</description>
    <inlineHelpText>ContentDocumentHandler apex class</inlineHelpText>
    <label>ContentDocumentHandler</label>
    <type>Checkbox</type>
</CustomField>