force-app/main/default/objects/ProcessSwitches__c/fields/ContentDocumentLinkHandler__c.field-meta.xml
<CustomField>
    <fullName>ContentDocumentLinkHandler__c</fullName>
    <defaultValue>true</defaultValue>
    <description>ContentDocumentLinkHandler apex class</description>
    <inlineHelpText>ContentDocumentLinkHandler apex class</inlineHelpText>
    <label>ContentDocumentLinkHandler</label>
    <type>Checkbox</type>
</CustomField>