force-app/main/default/objects/ProcessSwitches__c/fields/ContentVersionHandler__c.field-meta.xml
<CustomField>
    <fullName>ContentVersionHandler__c</fullName>
    <defaultValue>true</defaultValue>
    <description>ContentVersionHandler apex class</description>
    <inlineHelpText>ContentVersionHandler apex class</inlineHelpText>
    <label>ContentVersionHandler</label>
    <type>Checkbox</type>
</CustomField>