force-app/main/default/objects/ProcessSwitches__c/fields/EmailAlertTriggerEventHandler__c.field-meta.xml
<CustomField>
    <fullName>EmailAlertTriggerEventHandler__c</fullName>
    <defaultValue>true</defaultValue>
    <label>EmailAlertTriggerEventHandler</label>
    <type>Checkbox</type>
</CustomField>