force-app/main/default/objects/ProcessSwitches__c/fields/EmailAlertTriggerHandler__c.field-meta.xml
<CustomField>
    <fullName>EmailAlertTriggerHandler__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Email Alert Trigger Handler</label>
    <type>Checkbox</type>
</CustomField>