force-app/main/default/objects/ProcessSwitches__c/fields/EmailVerificationHandler__c.field-meta.xml
<CustomField>
    <fullName>EmailVerificationHandler__c</fullName>
    <defaultValue>true</defaultValue>
    <label>EmailVerificationHandler</label>
    <type>Checkbox</type>
</CustomField>