force-app/main/default/objects/ProcessSwitches__c/fields/EventHandler__c.field-meta.xml
<CustomField>
    <fullName>EventHandler__c</fullName>
    <defaultValue>false</defaultValue>
    <label>EventHandler</label>
    <type>Checkbox</type>
</CustomField>