force-app/main/default/objects/ProcessSwitches__c/fields/FilingHandler__c.field-meta.xml
<CustomField>
    <fullName>FilingHandler__c</fullName>
    <defaultValue>true</defaultValue>
    <label>FilingHandler</label>
    <type>Checkbox</type>
</CustomField>