force-app/main/default/objects/ProcessSwitches__c/fields/FilingLineItemHandler__c.field-meta.xml
<CustomField>
    <fullName>FilingLineItemHandler__c</fullName>
    <defaultValue>true</defaultValue>
    <label>FilingLineItemHandler</label>
    <type>Checkbox</type>
</CustomField>