force-app/main/default/objects/ProcessSwitches__c/fields/PaymentRequestHandler__c.field-meta.xml
<CustomField>
    <fullName>PaymentRequestHandler__c</fullName>
    <defaultValue>false</defaultValue>
    <label>PaymentRequestHandler</label>
    <type>Checkbox</type>
</CustomField>