force-app/main/default/objects/ProcessSwitches__c/fields/PUCCaseHandler__c.field-meta.xml
<CustomField>
    <fullName>PUCCaseHandler__c</fullName>
    <defaultValue>false</defaultValue>
    <label>PUC Case Handler</label>
    <type>Checkbox</type>
</CustomField>