force-app/main/default/objects/ProcessSwitches__c/fields/PUCTransactionHandler__c.field-meta.xml
<CustomField>
    <fullName>PUCTransactionHandler__c</fullName>
    <defaultValue>false</defaultValue>
    <label>PUC Transaction Handler</label>
    <type>Checkbox</type>
</CustomField>