force-app/main/default/objects/ProcessSwitches__c/fields/PUCTransactionItemHandler__c.field-meta.xml
<CustomField>
    <fullName>PUCTransactionItemHandler__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Controls execution of the PUCTransactionItemHandler class</description>
    <label>PUC Transaction Item Handler</label>
    <type>Checkbox</type>
</CustomField>