force-app/main/default/objects/ProcessSwitches__c/fields/SubscriberHandler__c.field-meta.xml
<CustomField>
    <fullName>SubscriberHandler__c</fullName>
    <defaultValue>true</defaultValue>
    <label>SubscriberHandler</label>
    <type>Checkbox</type>
</CustomField>