force-app/main/default/objects/ProcessSwitches__c/fields/TariffDocumentHandler__c.field-meta.xml
<CustomField>
    <fullName>TariffDocumentHandler__c</fullName>
    <defaultValue>true</defaultValue>
    <label>TariffDocumentHandler</label>
    <type>Checkbox</type>
</CustomField>