force-app/main/default/objects/ProcessSwitches__c/fields/TariffHandler__c.field-meta.xml
<CustomField>
    <fullName>TariffHandler__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Tariff Handler</label>
    <type>Checkbox</type>
</CustomField>