force-app/main/default/objects/ProcessSwitches__c/fields/TaskHandler__c.field-meta.xml
<CustomField>
    <fullName>TaskHandler__c</fullName>
    <defaultValue>true</defaultValue>
    <description>TaskHandler apex class</description>
    <inlineHelpText>TaskHandler apex class</inlineHelpText>
    <label>TaskHandler</label>
    <type>Checkbox</type>
</CustomField>