force-app/main/default/objects/ProcessSwitches__c/fields/TestHandler__c.field-meta.xml
<CustomField>
    <fullName>TestHandler__c</fullName>
    <defaultValue>true</defaultValue>
    <description>This field is only for apex unit testing in TriggerHandlerTest.cls. Do not name a real process with this name.</description>
    <inlineHelpText>This field is only for apex unit testing in TriggerHandlerTest.cls. Do not name a real process with this name.</inlineHelpText>
    <label>TestHandler</label>
    <type>Checkbox</type>
</CustomField>