force-app/main/default/objects/ProcessSwitches__c/fields/TransactionHandler__c.field-meta.xml
<CustomField>
    <fullName>TransactionHandler__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Transaction Handler</label>
    <type>Checkbox</type>
</CustomField>