force-app/main/default/objects/ProcessSwitches__c/fields/UserHandler__c.field-meta.xml
<CustomField>
    <fullName>UserHandler__c</fullName>
    <defaultValue>true</defaultValue>
    <label>UserHandler</label>
    <type>Checkbox</type>
</CustomField>